[project]
name = "major-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi>=0.129.0",
    "googletrans>=4.0.2",
    "psycopg2-binary>=2.9.11",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "speechrecognition>=3.14.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
